kustomize/nexus/bases/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8081'
  labels:
    app: nexus
spec:
  selector:
    app: nexus
  ports:
    - port: 8081
      name: http
