kustomize/nexus/bases/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus
  labels:
    app: nexus
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: nexus
